# sephix

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
etc/: sephix.config
include/: config.h  euid.h  profile.h  sephix_build_config.h.in  sephix_config.h.in  syscall_wrappers.h  util.h
include/ds/: string.h
include/sephix/: config.h  landlock.h  net.h  netctx.h  sandbox.h  util.h
src/: config.c  euid.c  syscall_wrappers.c  util.c
src/ds/: string.c
src/profile/: lexer.l  parser.y  profile.c
src/sephix/: caps.c  config.c  fs.c  landlock.c  main.c  net.c  sandbox.c  seccomp.c  util.c  uts.c
tools/: compile.sh  install.sh
